feat: buiild http server

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "eslint": "^9.33.0",
     "eslint-config-dicodingacademy": "^0.9.5",
     "globals": "^16.3.0"
+  },
+  "dependencies": {
+    "@hapi/hapi": "^21.4.3"
   }
 }
