--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "globals": "^16.3.0"
   },
   "dependencies": {
-    "@hapi/hapi": "^21.4.3"
+    "@hapi/hapi": "^21.4.3",
+    "nanoid": "^3.3.11"
   }
 }
